add user input for quality gates

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.projectVersion=1.0
 ​
 ## Project Configuration
 sonar.projectDescription=Salesforce Hospitality
-sonar.links.homepage=https://amadeus.my.salesforce.com
+sonar.links.homepage=https://amadeus-hospitality.my.salesforce.com
 sonar.links.ci=
 sonar.links.issue=
 sonar.links.scm=https://rndwww.nce.amadeus.net/git/projects/AHSF/repos/salesforce/browse
