--- a/manifest/W-026493/package.xml
+++ b/manifest/W-026493/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-		<members>sLTC_AcceptLead</members>
+		<members>sltc_Accept_Lead</members>
 		<members>sltc_utility</members>
 		<name>LightningComponentBundle</name>
 	</types>
