--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>DevOpsClass1</members>
-        <members>DevOpsClass_Test1</members>
+        <members>DevOpsClass</members>
+        <members>DevOpsClass_Test</members>
         <name>ApexClass</name>
     </types>
     
