--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AH_Demo_CI_CD_Contlr</members>
-        <members>AH_CI_CD_Contlr_Test</members>
+        <members>AH_DemoCICDContlr</members>
+        <members>AH_DemoCICDContlr_Test</members>
         <name>ApexClass</name>
     </types>
     
