W-030460 : Class is used to override Apttus Asset Line Item Callback query by adding filter on Asset Status and Related

--- a/manifest/W-030460/package.xml
+++ b/manifest/W-030460/package.xml
@@ -3,6 +3,8 @@
     <types>
         <members>SLTC_DeleteRenewalConfiguration</members>
         <members>SLTC_DeleteRenewalConfiguration_Test</members>
+        <members>SLTC_AmadeusAssetCallback</members>
+		<members>SLTC_AmadeusAssetCallback_Test</members>
         <name>ApexClass</name>
     </types>
     <types>
