W-027814 : change trigger name as per standard

--- a/manifest/W-027814/package.xml
+++ b/manifest/W-027814/package.xml
@@ -2,11 +2,17 @@
     <types>
         <members>SLTC_AssetLineItemTriggerHandler</members>
         <members>SLTC_AssetLineItemTriggerHandler_Test</members>
+        <members>SLTC_checkRecursive</members>
+        <members>SLTC_checkRecursive_Test</members>
         <members>SLTC_CommonUtils</members>
         <members>SLTC_CommonUtils_Test</members>
         <members>SLTC_Global_Constant</members>
         <members>SLTC_Global_Constant_Test</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>SLTC_AssetLineItem_AfterUpdate</members>
+        <name>ApexTrigger</name>
     </types>
     <version>55.0</version>
 </Package>
