Fixed pacjage.xml format

--- a/manifest/W-037237/package.xml
+++ b/manifest/W-037237/package.xml
@@ -3,6 +3,7 @@
 	    <members>AH_APT_Agreement_TriggerHandler</members>
         <members>AH_APT_Agreement_TriggerHandler_Test</members>
         <members>SLTC_AgreementTriggerHandler</members>
+        <members>SLTC_AgreementTriggerHelper</members>
         <members>SLTC_AgreementTriggerHandler_Test</members>
 		<name>ApexClass</name>
    </types>
