--- a/manifest/W-027819/package.xml
+++ b/manifest/W-027819/package.xml
@@ -2,7 +2,8 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
         <members>SLTC_LineItemFlow_Test</members>
-    	<name>ApexClass</name>
+        <members>SLTC_AgreementUpdateFlow_Test</members>
+        <name>ApexClass</name>
 	</types>
 	<version>55.0</version>
 </Package>
