--- a/manifest/W-037237/package.xml
+++ b/manifest/W-037237/package.xml
@@ -7,6 +7,7 @@
    </types>
    	<types>
 		<members>AH_APT_Agreement_BeforeUpdate</members>
+		<members>SLTC_Agreement_AfterUpdate</members>
 		<name>ApexTrigger</name>
 	</types>
 	<version>55.0</version>
