--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,7 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>*</members>
-		<name>CustomObjectTranslation</name>
+		<name>ApexPage</name>
 	</types>
 	<version>55.0</version>
 </Package>
