--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -4,5 +4,22 @@
 		<members>*</members>
 		<name>ApexClass</name>
 	</types>
+	<types>
+		<members>*</members>
+		<name>ApexComponent</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexPage</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTestSuite</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTrigger</name>
+	</types>
+	
 	<version>55.0</version>
 </Package>
