--- a/manifest/W-036527/package.xml
+++ b/manifest/W-036527/package.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>DevOpsClass</members>
-        <members>DevOpsClass_Test</members>
-        <name>ApexClass</name>
-    </types>
-    
-    <version>55.0</version>
+	<types>
+		<members>ChangeRequestTab</members>
+		<members>NI_Neighborhood_Case_ListView</members>
+		<members>ChangeRequestTabTestClass</members>
+		<members>AH_SolutionSearch_Ctlr_Test</members>
+		<members>NI_Neighborhood_Case_ListViewTest</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>SolutionInactiveTrigger</members>
+		<name>ApexTrigger</name>
+	</types>
+	<version>55.0</version>
 </Package>
+
